# gold_digger

./: Cargo.toml  README.md
.github/workflows/: release.yaml
gold_digger_plugin/: Cargo.toml
gold_digger_plugin/src/: actions.rs  base.rs  digger.rs  lib.rs  loading.rs  map.rs  menu.rs  ui.rs
gold_digger_plugin/src/loading/: paths.rs
resources/: cover.xcf  mining.xcf  tank_upgrade.xcf  waste.xcf
src/: main.rs
the_cleanup_plugin/: Cargo.toml
the_cleanup_plugin/src/: actions.rs  audio.rs  base.rs  digger.rs  lib.rs  loading.rs  map.rs  menu.rs  ui.rs
the_cleanup_plugin/src/loading/: paths.rs
