[package]
name = "gold_digger"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
    "gold_digger_plugin/default"
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy/", rev = "cd4c684ad5563c99b01e4ee6eea7c9b560c5dd5a", default-features = false }
gold_digger_plugin = {path = "gold_digger_plugin"}
winit = "0.24.0"
