[package]
name = "the_cleanup_plugin"
version = "0.3.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
    "bevy_kira_audio/mp3"
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy/", rev = "cd4c684ad5563c99b01e4ee6eea7c9b560c5dd5a", default-features = false }
bevy_kira_audio = { git="https://github.com/NiklasEi/bevy_kira_audio.git", branch = "bevy_master" }
rand = "0.8.3"
